# churn-prediction-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
docs/: deployment.md  ml_canvas.md  model_card.md  monitoring.md
notebooks/: 01_eda_and_baselines.ipynb  02_pytorch_mlp.ipynb  mlflow.db
notebooks/mlruns/2/models/m-3e391aefba1e4cf2a853db0480e0080f/artifacts/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
notebooks/mlruns/2/models/m-c1eb38dba3fb4806b03f515b0367a5e1/artifacts/: MLmodel  conda.yaml  requirements.txt
notebooks/mlruns/2/models/m-c1eb38dba3fb4806b03f515b0367a5e1/artifacts/data/: model.pth
scripts/: train_mlp.py
src/api/: main.py
src/churn_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: loader.py
src/features/: pipeline.py
src/models/: baseline.py  mlp.py
src/utils/: logger.py
tests/: test_churn.py
